--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -34,3 +34,9 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+      - name: Navigate to Challenge 1
+        run: |
+          echo Navigate to challeng 1
+          pwd
+        working-directory: ./challenge_1/example_directory
